[project]
name = "fullstack-web-development-hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton",email = "a.chertok@akatech.com.ua"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"


[tool.poetry.dependencies]
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
